Fix for the 'empty' user icon on small screens.
Reworked the top toolbar so the user name is always shown, the other labels are hidden on smaller screens but the icons stay visible (like the edit toolbar).

This was needed because when an empty string for the gravatar is chosen, there is a blank image used as user icon, and before this fix the empty blank icon was shown on smaller screens and the label with the user name was hidden, resulting in a empty `menu item.

--- a/web-ui/src/main/resources/catalog/views/default/less/gn_navbar_default.less
+++ b/web-ui/src/main/resources/catalog/views/default/less/gn_navbar_default.less
@@ -67,7 +67,6 @@
       &.gn-truncate {
         @media (min-width: @screen-lg-min) {
           max-width: 230px;
-          display: inline-block;
           .text-overflow();
         }
       }
